Simplify JavaVersionUtil