@@ -57,8 +57,6 @@ public class HsErrLogTest extends GraalCompilerTest {
         List<String> args = new ArrayList<>();
         if (JavaVersionUtil.JAVA_SPEC <= 8) {
             args.add("-XX:-UseJVMCIClassLoader");
-        } else {
-            args.add("--add-exports=jdk.internal.vm.compiler/org.graalvm.compiler.api.directives=ALL-UNNAMED");
         }
         args.add("-XX:+UseJVMCICompiler");
         args.add("-XX:CompileOnly=" + Crasher.class.getName() + "::tryCrash");
@@ -92,7 +90,7 @@ public class HsErrLogTest extends GraalCompilerTest {
             }
         }
 
-        Assert.fail(String.format("Could not find %s%n%s", re.pattern(), proc));
+        Assert.fail("Could not find " + re.pattern());
     }
 
     private static void checkHsErr(File hsErrPath) {
